@@ -6,7 +6,7 @@ topic-tags: deploying
 docset: aem65
 feature: Configuring
 exl-id: c1c90d6a-ee5a-487d-9a8a-741b407c8c06
-source-git-commit: 1a741ff01fcf17dfdcc8c1cebcd858052d07361c
+source-git-commit: bb8dbb9069c4575af62a4d0b21195cee75944fea
 workflow-type: tm+mt
 source-wordcount: '3583'
 ht-degree: 1%
@@ -353,7 +353,7 @@ Om binaryless replicatie met S3 te vormen, worden de volgende stappen vereist:
 1. Controleer of MongoDB is geïnstalleerd en of `mongod` wordt uitgevoerd.
 1. Begin AEM met de volgende opdracht:
 
-   `java -Xmx1024m -XX:MaxPermSize=256M -jar cq-quickstart.jar -r crx3,crx3mongo`
+   `java -Xmx1024m -jar cq-quickstart.jar -r crx3,crx3mongo`
 
 1. Herhaal stap 1 tot en met 4 voor de tweede AEM.
 1. Start de tweede AEM.
