@@ -1,8 +1,8 @@
 ---
 title: Implementeren en onderhouden
-seo-title: Implementeren en onderhouden
+seo-title: Deploying and Maintaining
 description: Leer hoe u aan de slag gaat met de AEM-installatie.
-seo-description: Leer hoe u aan de slag gaat met de AEM-installatie.
+seo-description: Learn how to get started with the AEM installation.
 uuid: 4429ac4d-abd7-47d8-b19d-773accb7cc7a
 contentOwner: Guillaume Carlino
 products: SG_EXPERIENCEMANAGER/6.5/SITES
@@ -11,15 +11,14 @@ topic-tags: deploying
 discoiquuid: e48cc0ed-688c-44c8-b6d6-5f3c8593a295
 docset: aem65
 exl-id: 3df0662a-0768-4b56-8b94-c517657b4bd9
-translation-type: tm+mt
-source-git-commit: 1cef6f87fa66fd78d439c23e6ac907f9531b8fd6
+source-git-commit: bb8dbb9069c4575af62a4d0b21195cee75944fea
 workflow-type: tm+mt
-source-wordcount: '1833'
+source-wordcount: '1808'
 ht-degree: 1%
 
 ---
 
-# Implementeren en onderhouden van{#deploying-and-maintaining}
+# Implementeren en onderhouden{#deploying-and-maintaining}
 
 Op deze pagina vindt u:
 
@@ -85,7 +84,7 @@ Op basis van deze basis biedt AEM ook een aantal functies op toepassingsniveau v
 
 Tot slot kunnen de klanten deze infrastructuur en toepassing-vlakke bouwstenen gebruiken om aangepaste oplossingen tot stand te brengen door toepassingen van hun te bouwen.
 
-De AEM server is **Java-based** en wordt uitgevoerd op de meeste besturingssystemen die dat platform ondersteunen. Alle cliëntinteractie met AEM wordt gedaan door **Webbrowser**.
+De AEM server is **op Java gebaseerd** en wordt uitgevoerd op de meeste besturingssystemen die ondersteuning bieden voor dat platform. Alle clientinteractie met AEM gebeurt via een **webbrowser**.
 
 ### Typische implementatiescenario&#39;s {#typical-deployment-scenarios}
 
@@ -96,7 +95,7 @@ In AEM terminologie is een &quot;instantie&quot;een exemplaar van AEM die op een
 
 Deze exemplaren zijn identiek wat geïnstalleerde software betreft. Ze worden alleen gedifferentieerd naar configuratie. Bovendien gebruiken de meeste installaties een verzender:
 
-* **Verzender**: Een statische webserver (Apache httpd, Microsoft IIS, enz.) aangevuld met de AEM dispatchermodule. Webpagina&#39;s die door de instantie publish worden gemaakt, worden in het cachegeheugen opgeslagen om de prestaties te verbeteren.
+* **Dispatcher**: Een statische webserver (Apache httpd, Microsoft IIS, enz.) aangevuld met de AEM dispatchermodule. Webpagina&#39;s die door de instantie publish worden gemaakt, worden in het cachegeheugen opgeslagen om de prestaties te verbeteren.
 
 Er zijn vele geavanceerde opties en uitbreidingen van deze opstelling, maar het basispatroon van auteur, publiceert en verzender is de kern van de meeste plaatsingen. We zullen ons eerst concentreren op een relatief eenvoudige opzet. Hierna zullen de geavanceerde implementatieopties worden besproken.
 
@@ -108,49 +107,49 @@ In de volgende secties worden beide scenario&#39;s beschreven:
 
 ### Op locatie {#on-premise}
 
-U kunt AEM installeren op servers in uw bedrijfsomgeving. Voorbeelden van gebruikelijke installatiematerialen zijn: Ontwikkelings-, test- en publicatieomgevingen. Raadpleeg de sectie [Aan de slag](/help/sites-deploying/deploy.md#getting%20started) voor basisinformatie over de manier waarop u de AEM software lokaal kunt installeren.
+U kunt AEM installeren op servers in uw bedrijfsomgeving. Voorbeelden van gebruikelijke installatiematerialen zijn: Ontwikkelings-, test- en publicatieomgevingen. Raadpleeg de [Aan de slag](/help/sites-deploying/deploy.md#getting%20started) voor basisinformatie over hoe u de software van de AEM lokaal kunt installeren.
 
-Meer over de typische plaatsingen op-gebouw leren, verwijs naar [Aanbevolen Plaatsingen](/help/sites-deploying/recommended-deploys.md).
+Meer over de typische plaatsingen op-gebouw leren, verwijs naar [Aanbevolen implementaties](/help/sites-deploying/recommended-deploys.md).
 
-### Managed Services met gebruik van Cloud Manager {#managed-services-using-cloud-manager}
+### Managed Services met Cloud Manager {#managed-services-using-cloud-manager}
 
 AEM Managed Services is een complete oplossing voor Digital Experience Management. Het biedt voordelen van een oplossing voor het leveren van ervaring in de cloud, terwijl alle voordelen van controle, beveiliging en aanpassing van een on-premise implementatie behouden blijven. AEM Managed Services stelt klanten in staat sneller te starten door te implementeren in de cloud en ook door te leren van de beste praktijken en ondersteuning van Adobe. Organisaties en zakelijke gebruikers kunnen hun klanten zo weinig mogelijk tijd in dienst nemen, hun marktaandeel vergroten en zich richten op het maken van innovatieve marketingcampagnes en tegelijk de last voor de IT-afdeling verminderen.
 
 Met AEM Managed Services kunnen klanten de volgende voordelen realiseren:
 
-**Sneller op de markt:** dankzij de flexibele cloudinfrastructuur van Adobe Managed Services kunnen organisaties snel succesvolle digitale ervaringen plannen, lanceren en optimaliseren. Adobe beheert de cloudarchitectuur zonder extra kapitaal, hardware of software vereist en de Succestechnici van de Klant van Adobe, hulp met AEM architectuur, levering, aanpassing voor het verbinden met back-end apps en go-live beste praktijken.
+**Snellere marktintroductie:** Met de flexibele cloudinfrastructuur van Adobe Managed Services kunnen organisaties snel succesvolle digitale ervaringen plannen, lanceren en optimaliseren. Adobe beheert de cloudarchitectuur zonder extra kapitaal, hardware of software vereist en de Succestechnici van de Klant van Adobe, hulp met AEM architectuur, levering, aanpassing voor het verbinden met back-end apps en go-live beste praktijken.
 
-**Hogere prestaties:** biedt betrouwbare digitale ervaringen voor uw bedrijf met vier opties voor de beschikbaarheid van services, 99,5%, 99,9%, 99,95% en 99,99%. Bovendien maakt het automatische back-up en multimode modellen voor noodherstel mogelijk om betrouwbaarheid en noodbeheer te garanderen.
+**Hogere prestaties:** Verstrekt betrouwbare digitale ervaringen voor uw zaken met vier opties van de de dienstbeschikbaarheid 99.5%, 99.9%, 99.95%, en 99.99%. Bovendien maakt het automatische back-up en multimode modellen voor noodherstel mogelijk om betrouwbaarheid en noodbeheer te garanderen.
 
-**Geoptimaliseerde IT-kosten:dankzij** proactieve begeleiding en expertise kunnen organisaties op de hoogte blijven van de nieuwste versie van AEM. Adobe Platinum-onderhoud en -support worden automatisch opgenomen in nieuwe implementaties van AMS Enterprise/Basic en bieden technische expertise en operationele ervaring om organisaties te helpen hun bedrijfskritieke toepassingen te onderhouden. Gratis basisanalysemogelijkheden of doelmogelijkheden bieden extra waarde, met name voor organisaties uit het midden- en kleinbedrijf die weinig behoefte hebben aan analyses en personalisatie.
+**Geoptimaliseerde IT-kosten:** Met proactieve begeleiding en expertise kunnen organisaties de nieuwste versie van AEM gebruiken. Adobe Platinum-onderhoud en -support worden automatisch opgenomen in nieuwe implementaties van AMS Enterprise/Basic en bieden technische expertise en operationele ervaring om organisaties te helpen hun bedrijfskritieke toepassingen te onderhouden. Gratis basisanalysemogelijkheden of doelmogelijkheden bieden extra waarde, met name voor organisaties uit het midden- en kleinbedrijf die weinig behoefte hebben aan analyses en personalisatie.
 
-**Hoogste veiligheid:** verzekert fysieke, netwerk, en gegevensveiligheid op bedrijfsniveau door klantentoepassingen in een beperkt-toegangsfaciliteit, achter firewallsystemen, of binnen een virtuele privé wolk te ontvangen. Het omvat virtuele machines van één huurder met robuuste gegevensopslagencryptie, antivirale middelen, en gegevensisolatie.
+**Hoogste beveiliging:** Zorgt voor fysieke beveiliging, netwerk en gegevensbeveiliging op bedrijfsniveau door klantentoepassingen te hosten in een beperkte-toegangsfaciliteit, achter firewallsystemen, of binnen een virtuele privécloud. Het omvat virtuele machines van één huurder met robuuste gegevensopslagencryptie, antivirale middelen, en gegevensisolatie.
 
-**Wolkenbeheer**: Cloud Manager, een onderdeel van de Adobe Experience Manager Managed Services-aanbieding, is een zelfbedieningsportaal waarmee organisaties Adobe Experience Manager in de cloud verder kunnen beheren. Het omvat een geavanceerde ononderbroken integratie en ononderbroken levering (CI/CD) pijpleiding die de teams van IT en implementatiepartners de levering van aanpassingen of updates laat versnellen zonder prestaties of veiligheid te compromitteren. Cloud Manager is alleen beschikbaar voor Adobe Managed Service-klanten.
+**Cloud Manager**: Cloud Manager, een onderdeel van de Adobe Experience Manager Managed Services-aanbieding, is een zelfbedieningsportaal waarmee organisaties Adobe Experience Manager in de cloud verder kunnen beheren. Het omvat een geavanceerde ononderbroken integratie en ononderbroken levering (CI/CD) pijpleiding die de teams van IT en implementatiepartners de levering van aanpassingen of updates laat versnellen zonder prestaties of veiligheid te compromitteren. Cloud Manager is alleen beschikbaar voor Adobe Managed Service-klanten.
 
-Raadpleeg [**Gebruikershandleiding voor Cloud Manager**](https://docs.adobe.com/content/help/en/experience-manager-cloud-manager/using/introduction-to-cloud-manager.html) voor meer informatie over Cloud Manager en de bijbehorende bronnen.
+Voor meer informatie over Cloud Manager en zijn bronnen raadpleegt u [**Gebruikershandleiding voor Cloud Manager**](https://docs.adobe.com/content/help/en/experience-manager-cloud-manager/using/introduction-to-cloud-manager.html).
 
 ## Aan de slag {#getting-started}
 
 ### Vereisten {#prerequisites}
 
-Terwijl de productie instanties gewoonlijk op specifieke machines in werking stellen die een officieel gesteund OS (zie [Technische Vereisten](/help/sites-deploying/technical-requirements.md)) in werking stellen, zal de server van de Experience Manager eigenlijk op om het even welk systeem lopen dat [**StandaardUitgave 8**](https://www.oracle.com/technetwork/java/javase/downloads/jdk8-downloads-2133151.html) steunt.
+Terwijl de productie instanties gewoonlijk op specifieke machines lopen die een officieel gesteund OS in werking stellen (zie [Technische vereisten](/help/sites-deploying/technical-requirements.md)), zal de server van de Experience Manager eigenlijk op om het even welk systeem lopen dat steunt [**Java Standard Edition 8**](https://www.oracle.com/technetwork/java/javase/downloads/jdk8-downloads-2133151.html).
 
-Voor vertrouwdmaking en voor het ontwikkelen op AEM is het vrij gebruikelijk om een instantie te gebruiken die op uw lokale computer wordt geïnstalleerd die Apple OS X of Desktopversies van Microsoft Windows of Linux in werking stelt.
+Voor vertrouwdmaking en voor het ontwikkelen op AEM is het vrij gebruikelijk om een instantie te gebruiken die op uw lokale computer wordt geïnstalleerd die OS X of Desktopversies van Microsoft Windows of Linux in werking stelt.
 
-Aan de clientzijde werkt AEM met alle moderne browsers (**Microsoft Edge**, **Internet Explorer** 11, **Chrome **51+** **, **Firefox **47+, **Safari** 8+) op zowel desktopsystemen als besturingssystemen. Zie [Ondersteunde client-Platforms](/help/sites-deploying/technical-requirements.md#supported-client-platforms) voor meer informatie.
+Op de client werkt AEM met alle moderne browsers (**Microsoft Edge**, **Internet Explorer** 11, **Chrome **51+** **, **Firefox **47+, **Safari** 8+) op zowel desktop als tablet besturingssystemen. Zie [Ondersteunde client-Platforms](/help/sites-deploying/technical-requirements.md#supported-client-platforms) voor meer informatie.
 
-### De software {#getting-the-software} ophalen
+### De software ophalen {#getting-the-software}
 
-Klanten met een geldig onderhouds- en ondersteuningscontract moeten een e-mailmelding met een code hebben ontvangen en AEM kunnen downloaden van de [**website voor Adobe-licenties**](https://licensing.adobe.com/). Zakelijke partners kunnen downloadtoegang aanvragen via [**spphelp@adobe.com**](mailto:spphelp@adobe.com).
+Klanten met een geldig onderhouds- en supportcontract hadden een e-mailmelding met een code moeten ontvangen en AEM van de [**Adobe-website voor licentieverlening**](https://licensing.adobe.com/). Zakelijke partners kunnen om downloadtoegang vragen van [**spphelp@adobe.com**](mailto:spphelp@adobe.com).
 
 Het softwarepakket AEM is beschikbaar in twee formulieren:
 
-* **cq-quickstart-6.5.0.jar:** Een standalone uitvoerbaar  ** jarfile dat alles omvat nodig om op en uit te komen.
+* **cq-quickstart-6.5.0.jar:** Een zelfstandig uitvoerbaar bestand *jar* een bestand dat alles bevat wat nodig is om aan de slag te gaan.
 
-* **cq-quickstart-6.5.0.war:** Een  ** warfile voor plaatsing in een derdetoepassingsserver.
+* **cq-quickstart-6.5.0.war:** A *oorlog* bestand voor implementatie op een externe toepassingsserver.
 
-In de volgende sectie beschrijven wij **standalone installatie**. Zie [Application Server Install](/help/sites-deploying/application-server-install.md) voor meer informatie over het installeren van AEM in een toepassingsserver.
+In de volgende sectie beschrijven we de **zelfstandige installatie**. Zie voor meer informatie over het installeren van AEM in een toepassingsserver [Installeren van toepassingsserver](/help/sites-deploying/application-server-install.md).
 
 ### Standaard lokale installatie {#default-local-install}
 
@@ -166,7 +165,7 @@ In de volgende sectie beschrijven wij **standalone installatie**. Zie [Applicati
 
    *Het pad van de bestandsmap mag alleen uit ASCII-tekens van de Verenigde Staten bestaan.*
 
-1. Plaats de **jar** en **license **files in deze folder:
+1. Plaats de **jar** en **licentie **bestanden in deze directory:
 
    ```shell
    <aem-install>/
@@ -174,37 +173,31 @@ In de volgende sectie beschrijven wij **standalone installatie**. Zie [Applicati
        license.properties
    ```
 
-   Als u geen `license.properties` dossier verstrekt, AEM zal uw browser aan een **Welkome** scherm bij opstarten opnieuw richten, waar u een vergunningssleutel kunt ingaan. U moet een geldige licentiecode aanvragen bij Adobe als u die nog niet hebt.
+   Als u geen `license.properties` bestand, AEM wordt uw browser omgeleid naar een **Welkom** scherm bij het opstarten, waar u een licentiecode kunt invoeren. U moet een geldige licentiecode aanvragen bij Adobe als u die nog niet hebt.
 
-1. Als u de instantie wilt starten in een GUI-omgeving, dubbelklikt u op het bestand **`cq-quickstart-6.5.0.jar`**.
+1. Als u de instantie wilt starten in een GUI-omgeving, dubbelklikt u op de knop **`cq-quickstart-6.5.0.jar`** bestand.
 
-   U kunt ook AEM starten vanaf de opdrachtregel. Voer voor een 32-bits Java VM het volgende in:
+   U kunt ook AEM starten vanaf de opdrachtregel:
 
    ```shell
        java -Xmx1024M -jar cq-quickstart-6.5.0.jar
    ```
 
-   Voer voor een 64-bits VM het volgende in:
+AEM neemt enkele minuten in beslag om het jar-bestand uit te pakken, te installeren en op te starten. Deze procedure leidt tot:
 
-   ```shell
-       java -XX:MaxPermSize=256m -Xmx1024M -jar cq-quickstart-6.5.0.jar
-   ```
-
-AEM neemt enkele minuten in beslag om het jar-bestand uit te pakken, zelf te installeren en op te starten. Deze procedure leidt tot:
-
-* een **AEM auteur**-instantie
-* uitvoeren op **localhost**
+* een **AEM auteur** instance
+* wordt uitgevoerd op **localhost**
 * op poort **4502**
 
 Als u toegang wilt tot de instantie, richt u de browser op:
 
 **`https://localhost:4502`**
 
-Het resultaat in auteurinstantie zal automatisch worden gevormd om met **te verbinden publiceert instantie** op **`localhost:4503`**.
+Het resultaat in auteursinstantie zal automatisch worden gevormd om met een **publish-instantie** op **`localhost:4503`**.
 
 ### Auteur- en publicatie-installaties {#author-and-publish-installs}
 
-De standaardinstallatie (een **auteur**-instantie op **`localhost:4502`**) kan eenvoudig worden gewijzigd door de naam van het `jar`-bestand te wijzigen voordat het voor het eerst wordt gestart. Het naamgevingspatroon is:
+De standaardinstallatie (en **auteur** instantie op **`localhost:4502`**) kan worden gewijzigd door de naam van de `jar` voordat u het voor het eerst start. Het naamgevingspatroon is:
 
 **`cq-<instance-type>-p<port-number>.jar`**
 
@@ -212,13 +205,13 @@ De naam van het bestand wijzigen in
 
 **`cq-author-p4502.jar`**
 
-en het lanceren van het zal in een auteursinstantie resulteren die op **`localhost:4502`** loopt.
+en het lanceren van het zal resulteren in een auteursinstantie lopend op **`localhost:4502`**.
 
 Ook de naam van het bestand wijzigen en het bestand starten
 
 **`cq-publish-p4503.jar`**
 
-resulteert in een publicatie-instantie die op **`localhost:4503`** wordt uitgevoerd.
+resulteert in een publicatie-instantie die wordt uitgevoerd op **`localhost:4503`**.
 
 U installeert deze twee varianten bijvoorbeeld in
 
@@ -233,7 +226,7 @@ Raadpleeg de volgende bronnen voor meer informatie over het aanpassen van de ins
 
 ### Onverpakte installatiemap {#unpacked-install-directory}
 
-Wanneer de quickstart-jar voor de eerste keer wordt gestart, wordt deze zichzelf in dezelfde map onder een nieuwe submap met de naam `crx-quickstart` uitgepakt. U zou met het volgende moeten eindigen:
+Wanneer de quickstart-jar voor de eerste keer wordt gestart, wordt deze zichzelf in dezelfde map uitgepakt onder een nieuwe subdirectory met de naam `crx-quickstart`. U zou met het volgende moeten eindigen:
 
 ```xml
 <aem-install>/
@@ -263,15 +256,15 @@ Als de instantie is geïnstalleerd vanuit de gebruikersinterface, wordt automati
 
 >[!NOTE]
 >
->Als u symlinks gebruikt, bekijkt u [problemen met symlink](https://helpx.adobe.com/experience-manager/kb/changing-symlink.html).
+>Als u symlinks gebruikt, kunt u het volgende doen: [kwesties met symlink](https://helpx.adobe.com/experience-manager/kb/changing-symlink.html).
 
-### {#starting-and-stopping} starten en stoppen
+### Starten en stoppen {#starting-and-stopping}
 
 Wanneer AEM zichzelf heeft losgemaakt en voor het eerst is opgestart, door te dubbelklikken op het jar-bestand in de installatiemap, wordt de instantie gewoon gestart, maar wordt deze niet opnieuw geïnstalleerd.
 
-Om de instantie van GUI tegen te houden, klik eenvoudig **on/off** schakelaar op het venster van de Desktoptoepassing.
+Als u de instantie van de GUI wilt stoppen, klikt u gewoon op de knop **aan/uit** schakelt u het toepassingsvenster van het bureaublad in.
 
-U kunt AEM ook stoppen en starten vanaf de opdrachtregel. Ervan uitgaande dat u de instantie al voor het eerst hebt geïnstalleerd, bevinden de opdrachtregelscripts **a1/> zich hier:**
+U kunt AEM ook stoppen en starten vanaf de opdrachtregel. Ervan uitgaande dat u de instantie al voor de eerste keer hebt geïnstalleerd, wordt **opdrachtregelscripts** bevinden zich hier:
 
 **`<aem-install>/crx-quickstart/bin/`**
 
@@ -282,7 +275,7 @@ Deze map bevat de volgende UNIX bash-shellscripts:
 * **`status`**: Rapporteert de status van de instantie
 * **`quickstart`**: Gebruikt om begininformatie te vormen, indien nodig.
 
-Er zijn ook equivalente **`bat`** bestanden voor Windows. Zie voor meer informatie:
+Er zijn ook gelijkwaardige **`bat`** bestanden voor Windows. Zie voor meer informatie:
 
 * [Start en stop opdrachtregel](/help/sites-deploying/command-line-start-and-stop.md)
 
